# peer-pressure

./: Cargo.toml  Dockerfile  README.md  flake.nix  run-chat.sh
.forgejo/workflows/: rust.yaml
.forgejo/workflowsrust.yaml/: rust.yaml
.github/workflows/: rust-ci.yml
01_domain/: Cargo.toml
01_domain/src/: chat.rs  error.rs  lib.rs  message.rs  peer.rs
02_application/: Cargo.toml
02_application/src/: error.rs  events.rs  lib.rs
02_application/src/ports/: event_receiver.rs  event_sender.rs  inbound_message_handler.rs  mod.rs  sender_service.rs
02_application/src/ports/repository/: chat.rs  error.rs  mod.rs  peer.rs
02_application/src/use_cases/: add_peer.rs  connect_and_resend.rs  mod.rs  peer_connected.rs  peer_disconnected.rs  receive_message.rs  send_message.rs  test_helper.rs
03_infrastructure/: Cargo.toml
03_infrastructure/src/: event_bus.rs  lib.rs
03_infrastructure/src/network/: mod.rs  wire_protocol.rs
03_infrastructure/src/network/tcp/: ip_peer_address.rs  mod.rs
03_infrastructure/src/network/tcp/unidirectional/: receiver.rs  sender.rs
03_infrastructure/src/persistence/: dtos.rs  file_chat_repository.rs  file_peer_repository.rs  mod.rs
04_presentation/: Cargo.toml
04_presentation/src/: app.rs  app_event_handler.rs  event_handler.rs  lib.rs  tui.rs  ui.rs  user_command.rs
04_presentation/src/tui/: app_event_handler.rs  input_handler.rs  mod.rs  ui.rs
src/: emoji_ip.rs  main.rs
