[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../01_domain" }
application = { path = "../02_application" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.89"
rand = "0.10.1"
uuid = { version = "1.23.1", features = ["v4"] }
tokio-util = { version = "0.7", features = ["codec"] }
thiserror = "2.0.18"
futures = "0.3.32"

[dev-dependencies]
tempfile = "3"
